--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -4,8 +4,9 @@ footer {
     width: 100%;
     border-top: 1px #cccccc;
     line-height: 36px;
-    text-align: center;
-    vertical-align: middle;
     bottom: 0;
     position: fixed;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
