--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -1,6 +1,9 @@
 body{
     margin: 0;
     padding: 0;
+    font-size: 14px;
+    color: #484848;
+    font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 .container {
     max-width: 1000px;
