--- a/web_static/styles/3-footer.css
+++ b/web_static/styles/3-footer.css
@@ -2,8 +2,7 @@ footer {
     background-color: white;
     height: 60px;
     width: 100%;
-    border-top: 1px #cccccc;
-    line-height: 36px;
+    border-top: 1px solid #cccccc;
     bottom: 0;
     position: fixed;
     display: flex;
